# fastkit-examples

crm-invoicing/: main.py  requirements.txt
crm-invoicing-old/: docker-compose.yaml  requirements.txt
crm-invoicing-old/alembic/: env.py
crm-invoicing-old/alembic/versions/: 3785fce2f0c6_imital_migrations.py
crm-invoicing-old/app/infrastructure/: auth.py
crm-invoicing-old/app/models/: enums.py  user.py
crm-invoicing-old/app/routers/: auth.py
crm-invoicing-old/app/seeders/: user_seeder.py
crm-invoicing-old/config/: app.py  auth.py
crm-invoicing-old/templates/: invoice.html
crm-invoicing-old/translations/: en.json
crm-invoicing/alembic/: env.py
fastkit-invoicing/: docker-compose.yaml  main.py  pyproject.toml
fastkit-invoicing/config/: app.py  cache.py  database.py
fastkit-invoicing/migrations/: env.py
fastkit-invoicing/migrations/versions/: 104fae214afa_create_invoices.py  37da63b0644a_create_invoice_items.py  5dc7620c50e2_create_products.py  dde42ece88c7_create_clients_table.py
fastkit-invoicing/modules/clients/: models.py  repository.py  router.py  schemas.py  service.py
fastkit-invoicing/modules/clientses/: models.py  repository.py  router.py  schemas.py  service.py
fastkit-invoicing/modules/invoice_items/: models.py  repository.py  router.py  schemas.py  service.py
fastkit-invoicing/modules/invoices/: models.py  repository.py  router.py  schemas.py  service.py
fastkit-invoicing/modules/products/: models.py  repository.py  router.py  schemas.py  service.py
fastkit-invoicing/seeders/: ProductSeeder.py
(+18 files in other folders)
