[project]
name = "fastkit-invoicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastkit-cli>=0.2.0",
    "fastkit-core[postgresql-async,redis]>=0.4.0",
    "mailbridge>=2.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
