[project]
name = "fastkit-invoicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastkit-cli>=0.2.0",
    "fastkit-core[postgresql-async,redis]>=0.4.0",
    "jinja2>=3.1.6",
    "mailbridge>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.13.2",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
